crates/graphql-project/tests/snapshots/validation_snapshots__invalid_typescript_snapshot.snap
---
source: crates/graphql-project/tests/validation_snapshots.rs
expression: "all_diagnostics.join(\"\\n\\n\")"
---
=== Document 1 ===
Error: type `User` does not have a field `invalidField`
    ╭─[ crates/graphql-project/tests/fixtures/invalid_typescript.tsx:7:7 ]
    │
  7 │       invalidField
    │       ──────┬─────  
    │             ╰─────── field `invalidField` selected here
    │
    ├─[ schema.graphql:15:6 ]
    │
 15 │ type User {
    │      ──┬─  
    │        ╰─── type `User` defined here
    │ 
    │ Note: path to the field: `query GetUser → user → invalidField`
────╯


Error: type `User` does not have a field `anotherBadField`
    ╭─[ crates/graphql-project/tests/fixtures/invalid_typescript.tsx:9:7 ]
    │
  9 │       anotherBadField
    │       ───────┬───────  
    │              ╰───────── field `anotherBadField` selected here
    │
    ├─[ schema.graphql:15:6 ]
    │
 15 │ type User {
    │      ──┬─  
    │        ╰─── type `User` defined here
    │ 
    │ Note: path to the field: `query GetUser → user → anotherBadField`
────╯


=== Document 2 ===
Error: the required argument `Query.post(id:)` is not provided
    ╭─[ crates/graphql-project/tests/fixtures/invalid_typescript.tsx:16:5 ]
    │
 16 │ ╭─▶     post {
    ┆ ┆   
 20 │ ├─▶     }
    │ │           
    │ ╰─────────── missing value for argument `id`
    │
    ├─[ schema.graphql:4:8 ]
    │
  4 │   post(id: ID!): Post
    │        ───┬───  
    │           ╰───── argument defined here
────╯
